--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body>
+  <body style="background:linear-gradient(135deg, #ff00ff, #00ffff);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
