--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ChatApp</title>
   </head>
-  <body style="background:linear-gradient(135deg, #ff00ff, #00ffff);">
+  <body style="background-color: rgb(240, 27, 130);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
